Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -406,7 +406,7 @@
     "default-retention": "Retención por defecto",
     "default-role": "Standard Benutzergruppe",
     "default-tax": "Standardsteuer",
-    "default-to-company-email": "Por defecto al email de la empresa",
+    "default-to-company-email": "Standardmäßig an die E-Mail des Unternehmens",
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Standard Lager",
     "delete": "entfernen",
@@ -462,7 +462,7 @@
     "discount": "Rabatt",
     "display": "Anzeige",
     "display-date": "Datum anzeigen",
-    "do-not-disable-plugins": "No desactivar plugins",
+    "do-not-disable-plugins": "P",
     "do-not-group": "Nicht zusammen fassen",
     "do-nothing": "Nichts unternehmen",
     "doc-type": "Dokumententyp",
@@ -555,7 +555,7 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
+    "es-tax-regime-cash-criteria": "K",
     "es-tax-regime-especial-agp": "Besonderes Regime für Landwirtschaft, Viehzucht und Fischerei",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Allgemeines Regime",
@@ -636,7 +636,7 @@
     "folder-not-writable": "Sie können nicht über FacturaScripts Ordner schreiben.",
     "font": "Schriftart",
     "font-size": "font-size",
-    "footer": "Pié de página",
+    "footer": "Fußzeile",
     "footer-text": "Fusszeilen Text",
     "for-admins": "Für Administratoren",
     "for-all": "Para todos",
@@ -658,7 +658,7 @@
     "from-subaccount": "von Unterkonto",
     "full-access": "voller Zugriff",
     "full-path": "vollständigen Pfad",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "L",
     "general": "Allgemeines",
     "general-concepts": "Allgemeine Konzepte",
     "general-data": "allgemeine Informationen",
@@ -709,7 +709,7 @@
     "group-name": "Nombre del Grupo",
     "group-or-split": "gruppieren oder trennen",
     "group-or-split-p": "Mit diesem Assistenten können Sie ausgehend von den Zeilen anderer ein neues Dokument generieren. Wählen Sie die Mengen aus, die Sie verwenden möchten, das Datum des neuen Dokuments und klicken Sie auf die Knopf Generieren.",
-    "grouping-type": "Agrupación",
+    "grouping-type": "Gruppierungstyp",
     "groups": "Gruppen",
     "has-attachments": "Tiene adjuntos",
     "has-parent": "has-parent",
@@ -750,9 +750,9 @@
     "import-accounting-plan": "Import accounting plan",
     "import-accounting-plan-p": "import-accounting-plan-p",
     "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "in-progress": "In Bearbeitung",
     "in-stock": "auf Lager",
-    "inactive": "inactive",
+    "inactive": "inaktiv",
     "income-and-expenses": "Income and Expenses",
     "incompatible-document": "incompatible-document",
     "incompatible-with-facturascripts": "Incompatible with FacturaScripts %version%",
@@ -817,7 +817,7 @@
     "journal-closing": "journal-closing",
     "journal-opening": "journal-opening",
     "journals": "Journals",
-    "july": "Julio",
+    "july": "Juli",
     "june": "Junio",
     "justified": "justified",
     "key-google-maps": "Google Maps Schlüssel",
@@ -933,7 +933,7 @@
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "max-risk",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
-    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
+    "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -974,7 +974,7 @@
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Mayo",
-    "month-6": "Junio",
+    "month-6": "Juni",
     "month-7": "Julio",
     "month-8": "Agosto",
     "month-9": "Septiembre",
@@ -1075,7 +1075,7 @@
     "options-button-header": "Layout und Berechtigungen",
     "order": "bestellen",
     "order-email-subject": "Ihre Bestellung %code%",
-    "order-email-text": "order-email-text",
+    "order-email-text": "o",
     "orders": "Aufträge",
     "origin": "Ursprung",
     "origin-warehouse": "Origin warehouse",
@@ -1083,7 +1083,7 @@
     "original-file": "Fichero original",
     "other-data": "Andere Daten",
     "others-filters": "Others filters",
-    "out-of-stock": "out-of-stock",
+    "out-of-stock": "nicht vorrätig",
     "page": "Seite",
     "page-break": "Salto de página",
     "page-configuration": "Seiteneinstellung",
@@ -1095,7 +1095,7 @@
     "pages": "Seiten",
     "paid": "bezahlt",
     "paid-or-unpaid": "Bezahlt oder unbezahlt",
-    "paid-receipts-prevent-action": "paid-receipts-prevent-action",
+    "paid-receipts-prevent-action": "Bezahlte Quittungen verhindern Aktion",
     "parent": "Elternteil",
     "parent-account": "Parent Account",
     "parent-family-cant-be-child": "Die Elternfamilie kann nicht mit dem Kind identisch sein.",
@@ -1139,7 +1139,7 @@
     "phones": "Telefonnummern",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
-    "php-support-end": "php-support-end",
+    "php-support-end": "PHP-Endsupport",
     "physical-stock": "Physischer Bestand",
     "picking": "Picking",
     "plan": "Planen",
@@ -1199,7 +1199,7 @@
     "process": "Proceso",
     "processing": "Verarbeitung",
     "product": "Produkt",
-    "product-not-found": "Producto %ref% no encontrado",
+    "product-not-found": "P",
     "products": "Produkte",
     "profile": "Perfil",
     "profit-and-loss": "Gewinn und Verlust",
@@ -1326,7 +1326,7 @@
     "search": "Suche",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-product": "Produkt suchen",
-    "second-hand": "Segunda mano",
+    "second-hand": "Z",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
     "select": "select",
@@ -1338,7 +1338,7 @@
     "selector-number": "Selector",
     "send": "send",
     "send-anonymous-data": "Enviar datos anónimos",
-    "send-audios": "Enviar audios",
+    "send-audios": "A",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
@@ -1347,7 +1347,7 @@
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "send-mail-ok",
     "send-videos": "Videos senden",
-    "sent-a-audio": "Envió un audio",
+    "sent-a-audio": "h",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Envió una imagen",
@@ -1403,7 +1403,7 @@
     "sort-by-ref-desc": "Ordenar por referencia desc.",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado descendente",
-    "source": "Fuente",
+    "source": "Quelle",
     "source-code": "Source code",
     "special-account": "Sonderkonto",
     "special-accounting-entries": "special-accounting-entries",
@@ -1447,14 +1447,14 @@
     "subject": "subject",
     "subtotal": "Zwischensumme",
     "subtract": "Subtract",
-    "success": "success",
+    "success": "Erfolg",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
     "sum-total-line-tax-must-be": "Die Summe der MwSt.-Summen der MwSt.-Zeilen sollte 0 sein.",
     "summary": "Summary",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "sunday",
-    "supplied": "supplied",
+    "supplied": "g",
     "supplied-amount": "supplied-amount",
     "supplied-subaccount-not-found": "supplied-subaccount-not-found",
     "supplier": "Lieferant",
@@ -1553,7 +1553,7 @@
     "translation": "Übersetzung",
     "translations": "Übersetzungen:",
     "travel": "Viaje",
-    "try-again-later": "try-again-later",
+    "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "tuesday",
     "type": "Typ",
     "type-alert": "Type alert",
@@ -1666,7 +1666,7 @@
     "yes": "wenn",
     "yesterday": "Gestern",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
-    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-audio": "D",
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
     "you-sent-a-location": "Enviaste una ubicación",
     "you-sent-a-picture": "Enviaste una imagen",
