--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -140,7 +140,7 @@
     "background-color": "Colore di sfondo",
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Distintivo",
-    "balance": "Equilibrio",
+    "balance": "Bilancio",
     "balance-account": "Balance account",
     "balance-account-abreviated": "Balance account abreviated",
     "balance-amounts": "Trial Balance",
@@ -631,7 +631,7 @@
     "fiscal-exercise": "Esercizio fiscale",
     "fiscal-id": "ID fiscale.",
     "fiscal-number": "fiscal-number",
-    "fixed-value": "fixed-value",
+    "fixed-value": "valore fisso",
     "flag": "Bandiera",
     "folder-not-writable": "Non è possibile scrivere sui FacturaScripts cartella.",
     "font": "Font",
@@ -668,7 +668,7 @@
     "generate-doc-type": "Generate document type",
     "generate-invoice": "Crea Fattura",
     "generate-receipts": "generate-receipts",
-    "generate-settlements": "generate-settlements",
+    "generate-settlements": "generare liquidazioni",
     "generate-test-data": "Genera dati di test",
     "generate-title": "Run report generation",
     "generated-accounting-entries": "0 voci di contabilità generate.",
@@ -744,7 +744,7 @@
     "image": "Imagen",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Sottoconto imposta dovuta",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "import",
     "import-accounting-plan": "Import accounting plan",
@@ -780,11 +780,11 @@
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "invalid-number",
     "invalid-request": "Richiesta non valida",
-    "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
+    "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "fattura",
     "invoice-email-subject": "invoice-email-subject",
-    "invoice-email-text": "invoice-email-text",
+    "invoice-email-text": "testo e-mail fattura",
     "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
     "invoice-have-rectifying-cant-delete": "La fattura ha già una rettifica. Non posso essere cancellato.",
     "invoice-new-assigned-date": "Ci sono invocie con data più grande (0). Nuova data assegnata: 1",
@@ -833,7 +833,7 @@
     "languages-es_CO": "Spagnolo (Colombia)",
     "languages-es_CR": "languages-es_CR",
     "languages-es_DO": "Spagnolo (Rep. Dominicana)",
-    "languages-es_EC": "languages-es_EC",
+    "languages-es_EC": "lingue-es_EC",
     "languages-es_ES": "Spanish (Spain)",
     "languages-es_GT": "Italiano",
     "languages-es_MX": "Spagnolo (Messico)",
@@ -855,7 +855,7 @@
     "last-month": "last-month",
     "last-price-estimation": "Última precio de presupuesto",
     "last-price-sale": "Último precio de venta",
-    "last-purchase-price": "last-purchase-price",
+    "last-purchase-price": "ultimo prezzo d'acquisto",
     "last-quarter": "last-quarter",
     "last-semester": "Ultimo semestre",
     "last-trimester": "Ultimo trimestre",
@@ -882,7 +882,7 @@
     "lines": "Linee",
     "linux": "Linux",
     "list": "Lista",
-    "load-def-acc-plan": "load-def-acc-plan",
+    "load-def-acc-plan": "carica-piano-conti-predefinito",
     "loading-controller": "Controller di caricamento: '0'",
     "location": "Posizione",
     "lock-accounting": "lock-accounting",
@@ -932,7 +932,7 @@
     "marked-as-homepage": "Contrassegnato come homepage",
     "max-input-vars-warning": "avviso-max-input-vars",
     "max-risk": "Rischio massimo",
-    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-with-cifnif": "Importo massimo con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Scorte massime",
     "may": "Mayo",
@@ -954,7 +954,7 @@
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Scorta minima",
-    "minutes": "Minutes",
+    "minutes": "Minuti",
     "mismatched-accounting-entry": "Mismatched registrazione contabile",
     "missing-data-epigraph-group": "Dati mancanti nell'epigrafe di gruppo.",
     "missing-data-subaccount": "Dati mancano dal subaccount.",
@@ -1021,7 +1021,7 @@
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Sin referencia",
     "no-selected-item": "no-selected-item",
-    "no-stock": "Niente scorte",
+    "no-stock": "Nessun stock",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Non editable document",
@@ -1148,7 +1148,7 @@
     "plugin-deleted": "Plugin %1$s cancellato con successo.",
     "plugin-disabled": "Plug-in disabilitato correttamente.",
     "plugin-enabled": "Plug-in attivato correttamente.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Questo server non consente di caricare file più grandi di %size% MB. Per favore, aumenta la dimensione massima di caricamento dei file in PHP o copia il file nella cartella Plugin.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin installato",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1225,7 +1225,7 @@
     "quantity-abb": "quantity-abb",
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "quantity-served",
-    "quantity-sold": "quantity-sold",
+    "quantity-sold": "quantità venduta",
     "randomizer-generating-more-items": "randomizer-generating-more-items",
     "rate": "rate",
     "rates": "Aliquote",
@@ -1234,7 +1234,7 @@
     "react": "Reaccionar",
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
-    "readonly": "readonly",
+    "readonly": "sola lettura",
     "rebuild": "rebuild",
     "rebuild-completed": "rebuild-completed",
     "rebuild-stock": "rebuild-stock",
@@ -1283,7 +1283,7 @@
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-invoices-success": "Le fatture dell'esercizio '%exercise%' sono state rinumerate correttamente",
     "repeat-new-password": "Ripetere la password",
     "repeat-password": "Repetir contraseña",
     "reply": "risposta",
@@ -1352,7 +1352,7 @@
     "sent-a-location": "Ha inviato una posizione",
     "sent-a-picture": "Ha inviato un'immagine",
     "sent-a-video": "Ha inviato un video",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-message-by": "Inviato da %nick% il %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
     "sequences": "sequences",
@@ -1389,7 +1389,7 @@
     "simple": "Semplice",
     "simplified": "Simplificada",
     "size": "size",
-    "sketch": "Boceto",
+    "sketch": "Schizzo",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "small",
     "smaller-than": "Più piccolo di",
@@ -1397,11 +1397,11 @@
     "social-security-number": "Social Security number",
     "sort": "Order",
     "sort-by-column": "Ordina per colonna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Ordina per data disc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordina per riferimento discendente",
-    "sorted-asc": "Ordenado ascendente",
+    "sorted-asc": "Ordinato ascendente",
     "sorted-desc": "Ordinato discendente",
     "source": "Fuente",
     "source-code": "Source code",
@@ -1509,7 +1509,7 @@
     "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "Il test del controller di posta non è implementato",
-    "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
+    "test-sendmail-not-implemented": "Il test del controllore di posta sendmail non è implementato",
     "text-color": "Color de texto",
     "texts": "testi",
     "third-quarter": "3º trimestre",
@@ -1546,7 +1546,7 @@
     "totallinea-value-error": "Errore nel valore totallinea della riga IVA dell'imposta 0 della fattura. Valore corretto: 1",
     "totals": "Totales",
     "town": "Cittadina",
-    "tracking-code": "tracking-code",
+    "tracking-code": "codice di tracciamento",
     "transfer": "transfer",
     "transfers": "transfers",
     "transfers-stock": "Transfers stock",
@@ -1586,7 +1586,7 @@
     "update-stock": "Update stock",
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
     "update-time": "update-time",
-    "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-model": "Aggiornato %model% (%key%) %desc%",
     "updater": "Updater",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
