--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -255,7 +255,7 @@
     "code": "Código",
     "codiso": "Código ISO",
     "color": "cor",
-    "color-danger": "Color peligro",
+    "color-danger": "Cor perigo",
     "color-dark": "Color oscuridad",
     "color-info": "Color info",
     "color-light": "Color luz",
@@ -301,7 +301,7 @@
     "context": "Contexto",
     "continue": "Continuar",
     "contract": "contract",
-    "contracts": "contracts",
+    "contracts": "contratos",
     "control-panel": "Painel de controle",
     "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
     "controller": "Controlador",
@@ -455,7 +455,7 @@
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
     "disable": "Desativar",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Desativar plugins",
     "disabled": "Desativado",
     "disabled-plugins": "Plugins desactivados",
     "discharge-date": "Data de descarga: 0",
@@ -503,7 +503,7 @@
     "email-cc": "Email Carbon Copy",
     "email-not-configured": "e",
     "email-not-sent": "Not sent",
-    "email-notification": "Notificación por email",
+    "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
@@ -535,7 +535,7 @@
     "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a 0 no exercício 1 <a href='2'> Você importou o quadro das contas? <\/a>",
     "equivalent-subaccount-not-found": "Não foi encontrada nenhuma subconta equivalente a 0 para copiar.",
     "error": "ERRO: 0",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "error-deleting-lines",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -568,12 +568,12 @@
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "estimation": "Estimativa",
     "estimation-email-subject": "O seu orçamento %code%",
-    "estimation-email-text": "Olá, vai anexo o orçamento %code%",
+    "estimation-email-text": "Olá, segue em anexo o orçamento %code%",
     "estimations": "Estimativas",
     "event": "Evento",
     "events": "Eventos",
     "exceptions": "Exceções",
-    "excess": "excess",
+    "excess": "excesso",
     "exclude-invalid": "Excluir inválidos",
     "exclude-valid": "Excluir válidos",
     "exempt": "Isentar",
@@ -742,7 +742,7 @@
     "idaccount": "Identidade. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
     "image": "Imagem",
-    "images": "Imágenes",
+    "images": "Imagens",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
@@ -914,7 +914,7 @@
     "machine": "machine",
     "machines": "machines",
     "macro-account-note-info": "Keys for values replacement macro",
-    "mail-server-error": "Error al conectar al servidor de correo",
+    "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "mail-test-error",
     "mail-test-ok": "Satisfactory email proof",
     "mailer": "Controlador de email",
@@ -1043,7 +1043,7 @@
     "notices": "Avisos",
     "notification": "Notificación",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de adjuntos",
     "number-length": "number-length",
@@ -1083,7 +1083,7 @@
     "original-file": "Fichero original",
     "other-data": "Outros dados",
     "others-filters": "Outros filtros",
-    "out-of-stock": "out-of-stock",
+    "out-of-stock": "fora de stock",
     "page": "Página",
     "page-break": "Salto de página",
     "page-configuration": "Página de Configuração",
@@ -1201,7 +1201,7 @@
     "product": "produtos",
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Produtos",
-    "profile": "Perfil",
+    "profile": "perfil",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
     "profits": "Beneficios",
@@ -1250,7 +1250,7 @@
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Facturas rectificativas",
-    "rectifying": "Rectificativa",
+    "rectifying": "Retificativa",
     "rectifying-serie": "rectifying-serie",
     "redirect": "Redirección",
     "reference": "Referência",
@@ -1359,8 +1359,8 @@
     "serial-number": "Número de Série",
     "serie": "Série",
     "serieb": "Serie B",
-    "serier": "Serie R",
-    "serierb": "Serie RB",
+    "serier": "Série R",
+    "serierb": "Série RB",
     "series": "Séries",
     "server": "Servidor",
     "service": "Serviço",
@@ -1372,7 +1372,7 @@
     "setup-options": "Opções de configuração",
     "shipping": "Shipping",
     "shipping-address": "Endereço de entrega",
-    "shop": "Tienda",
+    "shop": "Loja",
     "shops": "Tiendas",
     "short": "Curto",
     "short-name": "Nome curto",
@@ -1393,7 +1393,7 @@
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Pequeno",
     "smaller-than": "Menor que",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Social Security number",
     "sort": "Order",
     "sort-by-column": "Ordenar por columna",
@@ -1427,7 +1427,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
     "storage-limit-reached": "s",
     "stripe": "Stripe",
     "structured-data-csv": "Arquivo CSV",
@@ -1464,7 +1464,7 @@
     "supplier-delivery-notes": "Notas de Entrega de Fornecedores",
     "supplier-estimation": "Estimativa de Fornecedor",
     "supplier-estimations": "Estimativas de Fornecedor",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
@@ -1472,7 +1472,7 @@
     "supplier-order": "Supplier order",
     "supplier-orders": "Pedidos de fornecedores",
     "supplier-payment-concept": "b",
-    "supplier-products": "Produtos de fornecedor",
+    "supplier-products": "Produtos do fornecedor",
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
     "support": "Soporte",
@@ -1531,7 +1531,7 @@
     "title-font-size": "Tamanho da fonte do título",
     "title-url": "Título (URL)",
     "to": "Para",
-    "to-refund": "A devolver",
+    "to-refund": "A reembolsar",
     "to-report": "Para relatar",
     "today": "Hoje",
     "total": "Total",
@@ -1588,7 +1588,7 @@
     "update-time": "update-time",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Uploaded at",
     "url": "Local na rede Internet",
@@ -1614,7 +1614,7 @@
     "vat": "CUBA",
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-is-short": "O número '%vat-number%' é muito curto",
     "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
@@ -1669,9 +1669,9 @@
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
     "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Enviaste un video",
-    "you-should-change-passwd": "you-should-change-passwd",
+    "you-should-change-passwd": "deveria-mudar-senha",
     "your": "your",
     "zip-code": "Código postal",
     "zip-codes": "Códigos postales",
