--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -455,7 +455,7 @@
     "different-passwords": "Les contrasenyes per a l'usuari %userNick% no coincidixen",
     "different-than": "Diferent de",
     "disable": "Desactivar",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Desactivar connectors",
     "disabled": "Desactivat",
     "disabled-plugins": "Plugins desactivats",
     "discharge-date": "Data d'alta: %date%",
@@ -602,14 +602,14 @@
     "february": "Febrer",
     "field-can-not-be-null": "El camp %fieldName% de la taula %tableName% no pot ser nul",
     "field-required": "Camp requerit: %field%",
-    "fields": "Campos",
+    "fields": "Camps",
     "file": "Fitxer",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Error al enviar l'arxiu %fileName% perquè la seua extensió no està permesa. Les extensions permeses són: %accepted%",
     "file-name": "Nom de l'archiu",
     "file-not-exists": "L'archiu %fileName% no existix",
     "file-not-found": "L'archiu %fileName% no s'ha trobat.",
     "file-not-supported": "Fitxer no soportat",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-size-error": "Error en enviar el fitxer %fileName% perquè supera la mida màxima permesa de %maxSize% MB",
     "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "El fitxer %filePath% ja existeix",
     "filecache-clear": "Filecache netejada.",
@@ -770,7 +770,7 @@
     "integrity-check-help": "Esta és una comprovació de l'integritat del sistema descrita com",
     "interest": "Interés",
     "international-identifier": "Identificador internacional",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Intracomunitària",
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tindre entre %min% i %max% números o lletres.",
     "invalid-column-lenght": "La columna %column% ha de tindre entre %min% i %max% caràcters.",
     "invalid-date": "%date% no és una data vàlida.",
@@ -785,7 +785,7 @@
     "invoice": "Factura",
     "invoice-email-subject": "invoice-email-subject",
     "invoice-email-text": "invoice-email-text",
-    "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
+    "invoice-has-no-receipts": "La factura no té rebuts. Creeu-ne algun des de la pestanya rebuts.",
     "invoice-have-rectifying-cant-delete": "La factura ja té una rectificativa. No es pot eliminar.",
     "invoice-new-assigned-date": "Ja n'hi han factures posteriors a la data seleccionada (%oldDate%). La nova data asignada és: %newDate%",
     "invoice-number": "Número de factura",
@@ -860,7 +860,7 @@
     "last-semester": "El semestre passat",
     "last-trimester": "El trimestre passat",
     "last-update": "Última modificació",
-    "last-user": "Último usuario",
+    "last-user": "Últim usuari",
     "last-week": "La semana passada",
     "last-year": "L'any passat",
     "latitude": "Latitut",
@@ -868,7 +868,7 @@
     "ledger": "Diari",
     "left": "Esquerra",
     "level": "Nivell",
-    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-benefit-sales": "Nivell per veure beneficis",
     "level-cost-sales": "Nivel para ver costes",
     "level1": "Nivell 1",
     "level2": "Nivell 2",
@@ -908,7 +908,7 @@
     "long": "Llarc",
     "longitude": "Llongitut",
     "longitude-abb": "Long",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Buscar forats",
     "lot": "Lot",
     "low-security": "Seguritat baixa",
     "machine": "Màquina",
@@ -974,7 +974,7 @@
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Mayo",
-    "month-6": "Junio",
+    "month-6": "Juny",
     "month-7": "Julio",
     "month-8": "Agosto",
     "month-9": "Septiembre",
@@ -1063,11 +1063,11 @@
     "only-suspended": "Només els suspesos",
     "open": "Obri",
     "open-exercise": "Obrir exercici",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "Obri en una nova pestanya",
     "opened": "Obert",
     "opening-acounting-completed": "Obertura d'exercici correcta",
     "opening-operation": "Obertura",
-    "operation": "Operación",
+    "operation": "Operació",
     "operator": "Operador",
     "option": "Opció",
     "optional": "opcional",
@@ -1089,12 +1089,12 @@
     "page-configuration": "Pàgina de configuració",
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
-    "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
+    "page-option-info": "Des d'ací pots modificar els camps visibles en aquest llistat o formulari",
     "page-total-amount": "Total de la pàgina",
     "pagename": "Nom de la pàgina",
     "pages": "pàgines",
     "paid": "Pagat",
-    "paid-or-unpaid": "Pagado o impagado",
+    "paid-or-unpaid": "Pagat o impagat",
     "paid-receipts-prevent-action": "No es pot executar aquesta acció havent rebuts pagats",
     "parent": "Pare",
     "parent-account": "Conte Pare",
@@ -1204,7 +1204,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Pèrdues i  Guanys",
     "profit-and-loss-balance": "Balanç de Pèrdues i Guanys",
-    "profits": "Beneficios",
+    "profits": "Beneficis",
     "project": "Projecte",
     "projects": "projects",
     "provider-reference": "Referència del proveïdor",
@@ -1294,7 +1294,7 @@
     "reports": "Informes",
     "request-sent": "Petició enviada",
     "required": "required",
-    "requires-core": "Requiere FacturaScripts %version%",
+    "requires-core": "Requereix FacturaScripts %version%",
     "reserved": "Reservat",
     "reset": "La configuració s'ha reiniciat correctament.",
     "resource": "Recurs",
@@ -1358,7 +1358,7 @@
     "sequences": "Sequències",
     "serial-number": "Número de Série",
     "serie": "Série",
-    "serieb": "Serie B",
+    "serieb": "Sèrie B",
     "serier": "Sèrie R",
     "serierb": "Serie RB",
     "series": "Séries",
@@ -1509,7 +1509,7 @@
     "templates": "Plantilles",
     "test": "Prova",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
-    "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
+    "test-sendmail-not-implemented": "La prova del controlador de correu sendmail no està implementada",
     "text-color": "Color de texto",
     "texts": "textos",
     "third-quarter": "3r trimestre",
