--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -301,7 +301,7 @@
     "context": "Contexto",
     "continue": "Continuar",
     "contract": "contrato",
-    "contracts": "contracts",
+    "contracts": "contratos",
     "control-panel": "Painel de controle",
     "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
     "controller": "Controlador",
@@ -316,8 +316,8 @@
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
     "copy-subaccounts": "copy-subaccounts",
     "core-update": "core-update",
-    "core-update-warning": "Advertencias de actualización",
-    "correct": "Correcto",
+    "core-update-warning": "Avisos de atualização",
+    "correct": "Correto",
     "cost": "Coste",
     "cost-price": "Preço de custo",
     "cost-price-policy": "cost-price-policy",
@@ -414,7 +414,7 @@
     "delete-closing": "delete-closing",
     "delete-data": "Eliminar dados",
     "delete-file": "delete-file",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Excluir logs",
     "delete-opening": "Eliminar abertura",
     "delete-record": "Remover registro",
     "Deleted": "Eliminado",
@@ -455,7 +455,7 @@
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
     "disable": "Desativar",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Desativar plugins",
     "disabled": "Desativado",
     "disabled-plugins": "Plugins desactivados",
     "discharge-date": "Data de descarga: 0",
@@ -489,7 +489,7 @@
     "download-error": "Error al descargar. Código %status% - %error%",
     "download-xml": "Baixar XML",
     "downloads": "downloads",
-    "drag": "Arrastrar",
+    "drag": "Arrastar",
     "dto": "Disco.",
     "dto-2": "dto-2",
     "duplicate-record": "duplicate-record",
@@ -503,7 +503,7 @@
     "email-cc": "Email Carbon Copy",
     "email-not-configured": "e",
     "email-not-sent": "Not sent",
-    "email-notification": "Notificación por email",
+    "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
@@ -523,7 +523,7 @@
     "enable-api": "Enable API",
     "enable-updates-beta": "Ativar atualizações beta",
     "enabled": "ativado",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Plugins ativados",
     "encrypt": "Encrypt",
     "end-date": "Data final",
     "end-time": "end-time",
@@ -535,7 +535,7 @@
     "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a 0 no exercício 1 <a href='2'> Você importou o quadro das contas? <\/a>",
     "equivalent-subaccount-not-found": "Não foi encontrada nenhuma subconta equivalente a 0 para copiar.",
     "error": "ERRO: 0",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "error-deleting-lines",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -562,18 +562,18 @@
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
-    "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-surcharge": "Sobretaxa de equivalência",
     "es-tax-regime-telecom": "Regimes especiais aplicáveis aos serviços de telecomunicações, de radiodifusão ou de televisão e aos prestados por via eletrônica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Regime especial de bens usados, obras de arte, antiguidades e objetos de coleção",
     "estimation": "Estimativa",
     "estimation-email-subject": "O seu orçamento %code%",
-    "estimation-email-text": "Olá, vai anexo o orçamento %code%",
+    "estimation-email-text": "Olá, segue em anexo o orçamento %code%",
     "estimations": "Estimativas",
     "event": "Evento",
     "events": "Eventos",
     "exceptions": "Exceções",
-    "excess": "excess",
+    "excess": "excesso",
     "exclude-invalid": "Excluir inválidos",
     "exclude-valid": "Excluir válidos",
     "exempt": "Isentar",
@@ -742,7 +742,7 @@
     "idaccount": "Identidade. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
     "image": "Imagem",
-    "images": "Imágenes",
+    "images": "Imagens",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subconta de imposto impactado repercutido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
@@ -777,7 +777,7 @@
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "i",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Código ISO ''%iso-code% inválido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
@@ -914,7 +914,7 @@
     "machine": "machine",
     "machines": "machines",
     "macro-account-note-info": "Keys for values replacement macro",
-    "mail-server-error": "Error al conectar al servidor de correo",
+    "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "mail-test-error",
     "mail-test-ok": "Satisfactory email proof",
     "mailer": "Controlador de email",
@@ -925,7 +925,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
-    "march": "Marzo",
+    "march": "Março",
     "margin": "m",
     "margin-top": "Topo da margem",
     "mark-as-homepage": "Marque como página inicial",
@@ -986,7 +986,7 @@
     "more": "Mais",
     "more-fields": "Mais campos",
     "more-plugins": "Mais plugins",
-    "move-lines": "Mover líneas",
+    "move-lines": "Mover linhas",
     "movements": "movimentos",
     "my-profile": "Mi perfil",
     "mysql": "MySQL",
@@ -1016,7 +1016,7 @@
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "N",
-    "no-invoice": "no-invoice",
+    "no-invoice": "sem fatura",
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
@@ -1043,7 +1043,7 @@
     "notices": "Avisos",
     "notification": "Notificación",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de adjuntos",
     "number-length": "number-length",
@@ -1083,7 +1083,7 @@
     "original-file": "Fichero original",
     "other-data": "Outros dados",
     "others-filters": "Outros filtros",
-    "out-of-stock": "out-of-stock",
+    "out-of-stock": "fora de stock",
     "page": "Página",
     "page-break": "Quebra de página",
     "page-configuration": "Página de Configuraç",
@@ -1122,7 +1122,7 @@
     "pct-surcharge": "Surcharge rate",
     "pct-tax": "% impuestos",
     "pct-vat": "VAT rate",
-    "pending": "pending",
+    "pending": "pendente",
     "pending-invoices-button": "Risco:",
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "Pending reception",
@@ -1188,7 +1188,7 @@
     "print-data-records": "Imprimir todos os registros",
     "print-export-options": "Opções de impressão e exportação",
     "print-list-of-records": "Imprimir lista de registros",
-    "print-price": "Imprimir precios",
+    "print-price": "Imprimir preços",
     "print-quantity": "Imprimir cantidad",
     "printed": "Printed",
     "printing-format": "printing-format",
@@ -1201,7 +1201,7 @@
     "product": "produtos",
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Produtos",
-    "profile": "Perfil",
+    "profile": "perfil",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
     "profits": "Lucros",
@@ -1250,7 +1250,7 @@
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Facturas rectificativas",
-    "rectifying": "Rectificativa",
+    "rectifying": "Retificativa",
     "rectifying-serie": "rectifying-serie",
     "redirect": "Redirección",
     "reference": "Referência",
@@ -1267,7 +1267,7 @@
     "registered-installation": "r",
     "registered-installation-p": "registered-installation-p",
     "regularization-operation": "Operação de regularização",
-    "reject": "Rechazar",
+    "reject": "Rejeitar",
     "rejected": "rejeitado",
     "related": "related",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
@@ -1286,15 +1286,15 @@
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repita a senha",
     "repeat-password": "Repetir contraseña",
-    "reply": "Respuesta",
+    "reply": "Resposta",
     "report": "Relatório",
     "report-grouping-account": "Group by account",
     "report-non-grouping-account": "Non group by account",
     "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
     "request-sent": "request-sent",
-    "required": "required",
-    "requires-core": "Requiere FacturaScripts %version%",
+    "required": "obrigatório",
+    "requires-core": "Requer FacturaScripts %version%",
     "reserved": "Reserved",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
     "resource": "Resource",
@@ -1324,7 +1324,7 @@
     "save-filter": "Salvar Filtros",
     "sdk": "sdk",
     "search": "Pesquisa",
-    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-document": "Digite o número do %doctype% para pesquisar.",
     "search-product": "Buscar produto",
     "second-hand": "Segunda mão",
     "second-quarter": "2º trimestre",
@@ -1342,13 +1342,13 @@
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imagens",
     "send-invoices": "Enviar faturas",
-    "send-location": "Enviar ubicación",
+    "send-location": "Enviar localização",
     "send-mail": "Enviar email",
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "send-mail-ok",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Envió un audio",
-    "sent-a-document": "Envió un documento",
+    "sent-a-document": "Enviou um documento",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
@@ -1359,8 +1359,8 @@
     "serial-number": "Número de Série",
     "serie": "Série",
     "serieb": "Série B",
-    "serier": "Serie R",
-    "serierb": "Serie RB",
+    "serier": "Série R",
+    "serierb": "Série RB",
     "series": "Séries",
     "server": "Servidor",
     "service": "Serviço",
@@ -1372,7 +1372,7 @@
     "setup-options": "Opções de configuração",
     "shipping": "Shipping",
     "shipping-address": "Endereço de entrega",
-    "shop": "Tienda",
+    "shop": "Loja",
     "shops": "Tiendas",
     "short": "Curto",
     "short-name": "Nome curto",
@@ -1393,11 +1393,11 @@
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Pequeno",
     "smaller-than": "Menor que",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Social Security number",
     "sort": "Order",
     "sort-by-column": "Ordenar por columna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
@@ -1427,7 +1427,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
     "storage-limit-reached": "s",
     "stripe": "Stripe",
     "structured-data-csv": "Arquivo CSV",
@@ -1464,7 +1464,7 @@
     "supplier-delivery-notes": "Notas de Entrega de Fornecedores",
     "supplier-estimation": "Estimativa de Fornecedor",
     "supplier-estimations": "Estimativas de Fornecedor",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
@@ -1472,7 +1472,7 @@
     "supplier-order": "Supplier order",
     "supplier-orders": "Pedidos de fornecedores",
     "supplier-payment-concept": "b",
-    "supplier-products": "Produtos de fornecedor",
+    "supplier-products": "Produtos do fornecedor",
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
     "support": "Soporte",
@@ -1508,9 +1508,9 @@
     "template-not-found": "Modelo não encontrado",
     "templates": "Plantillas",
     "test": "Test",
-    "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
+    "test-mail-not-implemented": "O teste do controlador de e-mail Mail não está implementado",
     "test-sendmail-not-implemented": "O teste do controlador de correio sendmail não está implementado",
-    "text-color": "Color de texto",
+    "text-color": "Cor do texto",
     "texts": "Textos",
     "third-quarter": "3º trimestre",
     "third-trimester": "Terceiro Trimestre",
@@ -1531,7 +1531,7 @@
     "title-font-size": "Tamanho da fonte do título",
     "title-url": "Título (URL)",
     "to": "Para",
-    "to-refund": "A devolver",
+    "to-refund": "A reembolsar",
     "to-report": "Para relatar",
     "today": "Hoje",
     "total": "Total",
@@ -1570,7 +1570,7 @@
     "unchecked": "Sem checar",
     "under-minimums": "under-minimums",
     "undo": "Desfazer",
-    "unit-profit": "unit-profit",
+    "unit-profit": "lucro unitário",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Ilimitado",
@@ -1588,7 +1588,7 @@
     "update-time": "update-time",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Uploaded at",
     "url": "Local na rede Internet",
@@ -1600,7 +1600,7 @@
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Válido por um dia",
     "validate": "validate",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de avaliação",
@@ -1614,7 +1614,7 @@
     "vat": "CUBA",
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-is-short": "O número '%vat-number%' é muito curto",
     "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "Registro de VAT",
@@ -1646,7 +1646,7 @@
     "wildcard-title": "Curingas substituíveis por valor",
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
-    "without-groups": "Sin grupo",
+    "without-groups": "Sem grupo",
     "without-regularization": "without-regularization",
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
@@ -1669,9 +1669,9 @@
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
     "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Enviaste un video",
-    "you-should-change-passwd": "you-should-change-passwd",
+    "you-should-change-passwd": "deveria-mudar-senha",
     "your": "your",
     "zip-code": "Código postal",
     "zip-codes": "Códigos postales",
